--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests beautifulsoup4 maxminddb geoip2
+        pip install requests beautifulsoup4 geoip2 maxminddb
         
     - name: Clean old config files
       run: |
@@ -39,9 +39,10 @@ jobs:
         
     - name: Download GeoIP database
       run: |
-        wget -q "https://github.com/P3TERX/GeoLite.mmdb/raw/download/GeoLite2-Country.mmdb" -O /tmp/GeoLite2-Country.mmdb
-        mkdir -p geoip_data
-        cp /tmp/GeoLite2-Country.mmdb geoip_data/
+        wget -q -O GeoLite2-Country.tar.gz "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-Country&license_key=YOUR_LICENSE_KEY&suffix=tar.gz"
+        tar -xzf GeoLite2-Country.tar.gz
+        mv GeoLite2-Country_*/GeoLite2-Country.mmdb ./
+        rm -rf GeoLite2-Country_* GeoLite2-Country.tar.gz
         
     - name: Run Telegram Config Extractor
       run: python telegram_extractor.py
@@ -56,7 +57,7 @@ jobs:
         
     - name: Run Country Classifier
       run: python country_classifier.py
-      timeout-minutes: 30
+      timeout-minutes: 25
         
     - name: Create summary
       run: |
