--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,19 +30,12 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests beautifulsoup4 geoip2 maxminddb
+        pip install requests beautifulsoup4 geoip2
         
     - name: Clean old config files
       run: |
         rm -rf configs/
         mkdir -p configs/telegram configs/github configs/combined configs/country
-        
-    - name: Download GeoIP database
-      run: |
-        wget -q -O GeoLite2-Country.tar.gz "https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-Country&license_key=YOUR_LICENSE_KEY&suffix=tar.gz"
-        tar -xzf GeoLite2-Country.tar.gz
-        mv GeoLite2-Country_*/GeoLite2-Country.mmdb ./
-        rm -rf GeoLite2-Country_* GeoLite2-Country.tar.gz
         
     - name: Run Telegram Config Extractor
       run: python telegram_extractor.py
@@ -57,12 +50,17 @@ jobs:
         
     - name: Run Country Classifier
       run: python country_classifier.py
-      timeout-minutes: 25
+      timeout-minutes: 30
+      env:
+        MAX_WORKERS: 20
         
     - name: Create summary
       run: |
         date > last_update.txt
         echo "Updated: $(date -u '+%Y-%m-%d %H:%M UTC')" > update_info.txt
+        echo "Telegram configs: $(wc -l < configs/telegram/all.txt 2>/dev/null || echo 0)" >> update_info.txt
+        echo "GitHub configs: $(wc -l < configs/github/all.txt 2>/dev/null || echo 0)" >> update_info.txt
+        echo "Combined configs: $(wc -l < configs/combined/all.txt 2>/dev/null || echo 0)" >> update_info.txt
         
     - name: Configure Git
       run: |
